[gd_scene load_steps=10 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://CheckButtonSimulation.gd" type="Script" id=3]
[ext_resource path="res://HSliderSpeed.gd" type="Script" id=4]
[ext_resource path="res://LabelFPS.gd" type="Script" id=5]
[ext_resource path="res://Grid.gd" type="Script" id=6]
[ext_resource path="res://LabelSpeed.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.913725 )

[sub_resource type="GDScript" id=3]
script/source = "extends Label


func _ready():
	pass

"

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="HUD"]
anchor_bottom = 1.0
margin_right = 290.0
custom_styles/panel = SubResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="HUD/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Panel/ScrollContainer"]
margin_right = 270.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="LabelFPS" type="Label" parent="HUD/Panel/ScrollContainer/VBoxContainer"]
margin_right = 270.0
margin_bottom = 14.0
text = "FPS"
script = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/Panel/ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 58.0

[node name="LabelPaused" type="Label" parent="HUD/Panel/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_top = 13.0
margin_right = 68.0
margin_bottom = 27.0
text = "Simulation"
script = SubResource( 3 )

[node name="CheckButtonSimulation" type="CheckButton" parent="HUD/Panel/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 72.0
margin_right = 148.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Panel/ScrollContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 270.0
margin_bottom = 78.0

[node name="LabelSpeed" type="Label" parent="HUD/Panel/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 43.0
margin_bottom = 15.0
text = "Speed:"
script = ExtResource( 7 )

[node name="HSliderSpeed" type="HSlider" parent="HUD/Panel/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 270.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.05
max_value = 0.5
step = 0.05
value = 0.05
script = ExtResource( 4 )

[node name="ButtonStep" type="Button" parent="HUD/Panel/ScrollContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 270.0
margin_bottom = 102.0
text = "Step"

[node name="ButtonRandom" type="Button" parent="HUD/Panel/ScrollContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 270.0
margin_bottom = 126.0
text = "Random fill"

[node name="ButtonClear" type="Button" parent="HUD/Panel/ScrollContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 270.0
margin_bottom = 150.0
text = "Clear"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 481, 331 )
current = true
script = ExtResource( 2 )

[connection signal="pause_state_changed" from="." to="HUD/Panel/ScrollContainer/VBoxContainer/HBoxContainer2/CheckButtonSimulation" method="_on_Root_pause_state_changed"]
[connection signal="toggled" from="HUD/Panel/ScrollContainer/VBoxContainer/HBoxContainer2/CheckButtonSimulation" to="." method="_on_CheckButtonSimulation_toggled"]
[connection signal="value_changed" from="HUD/Panel/ScrollContainer/VBoxContainer/HBoxContainer/HSliderSpeed" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="HUD/Panel/ScrollContainer/VBoxContainer/HBoxContainer/HSliderSpeed" to="HUD/Panel/ScrollContainer/VBoxContainer/HBoxContainer/LabelSpeed" method="_on_HSliderSpeed_value_changed"]
[connection signal="button_down" from="HUD/Panel/ScrollContainer/VBoxContainer/ButtonStep" to="." method="_on_ButtonStep_button_down"]
[connection signal="button_down" from="HUD/Panel/ScrollContainer/VBoxContainer/ButtonRandom" to="." method="_on_Random_button_down"]
[connection signal="button_down" from="HUD/Panel/ScrollContainer/VBoxContainer/ButtonClear" to="." method="_on_ButtonClear_button_down"]
